--- a/app/views/event_entries/edit.html.erb
+++ b/app/views/event_entries/edit.html.erb
@@ -1,8 +1,7 @@
-<div class="event">
-	<%= form_with(url: event_entry_path, local: true) do |f| %>
+<%= form_with(url: event_entry_path, method: :put, local: true) do |f| %>
+  <div class="event">
     <table>
-      <%= @event_entries.each_with_index do |event_entry, i| %>
-        <% event = Event.find(event_entry.event_id) %>
+      <% @event_entries.each_with_index do |event_entry, i| %>
         <% if i == 0 %>
           <tr>
             <th>
@@ -17,6 +16,7 @@
         <% end %>
         <tr>
           <td>
+            <% event = Event.find(event_entry.event_id) %>
             <%= event.day_time.strftime('%m/%d') %>(<%= %w(日 月 火 水 木 金 土)[event.day_time.wday] %>)
             <%= event.day_time.strftime('%H:%M') %>
             <%= event.ground %>
@@ -27,7 +27,7 @@
             <%= event.other%>
           </td>
           <td nowrap>
-            <div class="radio-button-group">
+            <div class="radio-button-group" id=<%=i%>>
               <%= fields_for "event_option_entries[]", event_entry.event_option_entry do |feeling| %>
                 <div class="input-container">
                   <%= feeling.radio_button :feeling, :OK, class: "radio_button" %>
@@ -48,6 +48,6 @@
         </tr>
       <% end %>
     </table>
-    <%= f.submit "更新する", class: "btn-event-edit btn-orange" %>
-  <% end %>
-</div>
+  </div>
+  <%= f.submit "更新する", class: "btn-event-edit btn-orange" %>
+<% end %>
