--- a/app/views/event_entries/edit.html.erb
+++ b/app/views/event_entries/edit.html.erb
@@ -49,5 +49,5 @@
       <% end %>
     </table>
   </div>
-  <%= f.submit "更新する", class: "btn-event-edit btn-orange" %>
+  <%= f.submit "更新する", class: "btn-event-edit btn--orange" %>
 <% end %>
