--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/error_messages' %>
 <div class="home-image">
   <%= image_tag("Home_img.webp",alt:"Baseball Image",width: "100%") %>
-  <p><span class="title">草野球の対戦相手が<br>
+  <p><span class="home-image__title">草野球の対戦相手が<br>
       スムーズに見つかる
     </span><br>
     草野球の<span>「スケジュール」</span>調整や対戦相手検索までを<br>
