--- a/app/views/teams/_search_team.html.erb
+++ b/app/views/teams/_search_team.html.erb
@@ -11,7 +11,7 @@
       <%= team.name %><br>
       <%= team.level %>
     </div>
-    <span class="btn-right btn-navy">
+    <span class="btn__right--navy">
       <%= link_to "スケジュール詳細", detail_schedule_team_path(team) %>
     </span>
     <div class="team-body">
