--- a/app/views/teams/search_schedule.html.erb
+++ b/app/views/teams/search_schedule.html.erb
@@ -27,7 +27,7 @@
         </span>
       </span>
     </div>
-    <%= f.submit '検索', class: "btn-event-search btn-navy" %>
+    <%= f.submit '検索', class: "btn-event-search btn--navy" %>
   <% end %>
 </div>
 <span class="instruction">
