--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
   <%= render 'form' %>
 </div>
 <span class="center">
-	<span class="btn btn-red">
+	<span class="btn--red">
 		<%= link_to "アカウント削除", user_path(current_user), method: :delete, data: {confirm: "アカウントを削除しますか？"} %>
 	</span> 
 </span>
