--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
   <div class ="other">
     <p>既に登録済みの方はログインしてください</p>
     <%= link_to (login_path) do %>
-      <div class= "form-btn btn-navy">ログイン</div>
+      <div class= "form__btn btn--navy">ログイン</div>
     <% end %>
   </div>
 </div>
