--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -41,8 +41,8 @@
               <%= event.other%>
               <% if @current_team.admin_user_id == @current_user.id %>
                 <span class="beside">
-                  <span class="btn btn-navy"><%= link_to "編集", edit_event_path(event) %></span>
-                  <span class="btn btn-red"><%= link_to "削除", event_path(event), method: :delete, data: {confirm: "このスケジュールを削除しますか？"} %></span>
+                  <span class="btn--navy"><%= link_to "編集", edit_event_path(event) %></span>
+                  <span class="btn--red"><%= link_to "削除", event_path(event), method: :delete, data: {confirm: "このスケジュールを削除しますか？"} %></span>
                 </span>
               <% end %>
             </th>
@@ -99,7 +99,7 @@
     </span>
   <% end %>
   <% if current_team.admin_user_id == current_user.id %>
-    <span class="btn-event btn-orange">
+    <span class="btn-event btn--orange">
       <%= link_to '新しいスケジュールを登録する', new_event_path %>
     </span>
   <% end %>
