--- a/app/views/game_requests/show.html.erb
+++ b/app/views/game_requests/show.html.erb
@@ -49,7 +49,7 @@
           <% end %>
         </div>
         <span class="btn-center">
-          <span class="btn btn-red">
+          <span class="btn--red">
             <%= link_to "試合リクエストを削除する", game_request_path(game_request), method: :delete, data: { confirm: "本当に削除しますか？" } %>
           </span>
         </span>
