--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -7,6 +7,6 @@
   <%= form_with(url:password_resets_path,scope: :password_reset, local:true) do |f| %>
     <%= f.label :email, 'メールアドレス' %>
     <%= f.email_field :email %>
-    <%= f.submit "送信する", class: "form-btn btn-navy", id: "login-btn" %>
+    <%= f.submit "送信する", class: "form__btn btn--navy", id: "login-btn" %>
   <% end %>
 </div>
