--- a/app/views/team/member_requests/show.html.erb
+++ b/app/views/team/member_requests/show.html.erb
@@ -11,10 +11,10 @@
       <li class="user">
         <%= User.find(request.user_id).name %>
         <div class="btns">
-          <span class="btn btn-navy">
+          <span class="btn--navy">
             <%= link_to "所属承認をする", team_team_members_path(id: request.id), method: :post %>
           </span>
-          <span class="btn btn-red">
+          <span class="btn--red">
             <%= link_to "拒否する", team_member_request_path(id: request.id), method: :delete %>
           </span>
         </div>
