--- a/app/views/team/team_members/show.html.erb
+++ b/app/views/team/team_members/show.html.erb
@@ -6,7 +6,7 @@
     <li class="user">
       <%= User.find(member.user_id).name %>
       <% if !current_user?(User.find(member.user_id)) %>
-        <span class="btn-destroy btn-red">
+        <span class="btn__right--red">
           <%= link_to "削除", team_team_member_path(member.id), method: :delete, data: { confirm: "本当に削除しますか？" } %>
         </span>
       <% else %>
