--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -3,17 +3,17 @@
 <%= render 'teams/team_profile' %>
 <div class="center">
   <% if @team.admin_user_id == current_user.id && @team == current_team %>
-    <span class="btn btn-orange">
+    <span class="btn--orange">
       <%= link_to "編集する",edit_team_path(@team) %>
     </span>
   <% end %>
   <% if current_user.already_belong?(@team) %>
   <% elsif current_user.already_requested?(@team) %>
-    <span class="btn btn-red">
+    <span class="btn--red">
       <%= link_to "申請を取り消す", user_member_request_path(@team.id), method: :delete %>
     </span>
   <% else %>
-    <span class="btn btn-orange">
+    <span class="btn--orange">
       <%= link_to "所属申請をする", user_member_requests_path(team_id: @team.id), method: :post %>
     </span>
   <% end %>
