--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
     <li class="user">
       <%= user.name %>
       <% if !current_user?(user) %>
-        <span class="btn-destroy btn-red">
+        <span class="btn__right--red">
           <%= link_to "削除", user, method: :delete,
                                       data: { confirm: "本当に削除しますか？" } %>
         </span>
