--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -99,7 +99,7 @@
     </span>
   <% end %>
   <% if current_team.admin_user_id == current_user.id %>
-    <span class="btn-event btn--orange">
+    <span class="btn__margin-top--orange">
       <%= link_to '新しいスケジュールを登録する', new_event_path %>
     </span>
   <% end %>
