--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,10 +40,10 @@
         </ul>
       </li>
     <% else %>
-      <span class="btn--navy">
+      <span class="btn__margin-left--navy">
         <%= link_to "ログイン",login_path %>
       </span>
-      <span class="btn--orange">
+      <span class="btn__margin-left--orange">
         <%= link_to "新規登録",signup_path %>
       </span>
     <% end %>
