--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -49,7 +49,7 @@
     <% end %>
   </ul>
   <div class="tab-area">
-    <div class="tab-area__tab-buttons">
+    <div class="tab-area__tab-button">
       <div class="tab tab1"><%= link_to "対戦相手検索", search_schedule_teams_path %></div>
       <div class="tab tab2">
         <% if @current_team != nil %>
