--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,10 +3,10 @@
 <div class="form">
   <h2>新規登録</h2>
   <%= render 'form' %>
-  <div class ="other">
+  <div class ="form__other">
     <p>既に登録済みの方はログインしてください</p>
     <%= link_to (login_path) do %>
-      <div class= "form__btn btn--navy">ログイン</div>
+      <div class= "form__btn--navy">ログイン</div>
     <% end %>
   </div>
 </div>
