--- a/app/views/event_entries/edit.html.erb
+++ b/app/views/event_entries/edit.html.erb
@@ -29,15 +29,15 @@
           <td nowrap>
             <div class="radio-button-group" id=<%=i%>>
               <%= fields_for "event_option_entries[]", event_entry.event_option_entry do |feeling| %>
-                <div class="input-container">
+                <div class="radio-button-group__input-container">
                   <%= feeling.radio_button :feeling, :OK, class: "radio_button" %>
                   <%= feeling.label :feeling, "◯", class: "radio-tile ok", value: "ok" %>
                 </div>
-                <div class="input-container">
+                <div class="radio-button-group__input-container">
                   <%= feeling.radio_button :feeling, :Neither, class: "radio_button" %>
                   <%= feeling.label :feeling, "△", class: "radio-tile neither", value: "neither" %>
                 </div>
-                <div class="input-container">
+                <div class="radio-button-group__input-container">
                   <%= feeling.radio_button :feeling, :NG, class: "radio_button" %>
                   <%= feeling.label :feeling, "×", class: "radio-tile ng", value: "ng" %>
                 </div>
