--- a/app/views/game_requests/show.html.erb
+++ b/app/views/game_requests/show.html.erb
@@ -17,11 +17,11 @@
           <%= image_tag("default_team_image.webp", size: "50x50", gravity: :center, crop: "50x50+0+0", class: "icon pc") %>
 					<%= image_tag("default_team_image.webp", size: "30x30", gravity: :center, crop: "30x30+0+0", class: "icon sp") %>
 				<% end %>
-        <div class="team-header">
+        <div class="team__header">
           <%= link_to @team.name, team_path(@team) %><br>
           <p><%= @team.level %></p>
         </div>
-        <div class="team-body">
+        <div class="team__body">
           活動エリア: <%= Prefecture.find(@team.prefecture_id).name %><br>
           活動曜日:
           <% weekly_columns.each_with_index do |day,i| %>
