--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,13 @@
 <% flash.each do |message_type, message| %>
-  <div class="alert alert-<%= message_type %>">
-    <% if message.include?('<br>')%>
-      <div class="alert-long">
-        <p><%= message.html_safe %></p>
-      </div>
-    <% else %>
-      <p><%= message %></p>
-    <% end %>
+  <div class="alert">
+		<div class="alert__<%= message_type %>">
+			<% if message.include?('<br>')%>
+				<div class="alert__long">
+					<p><%= message.html_safe %></p>
+				</div>
+			<% else %>
+				<p><%= message %></p>
+			<% end %>
+		</div>
   </div>
 <% end %>
