--- a/app/views/teams/detail_schedule.html.erb
+++ b/app/views/teams/detail_schedule.html.erb
@@ -11,7 +11,7 @@
       <table>
         <% @events.sort_by {|events| [events.day_time]}.each do |event| %>
           <tr>
-            <th class="detail-schedule">
+            <th class="detail-schedules__schedule">
 							<%= event.day_time.strftime('%m/%d') %>(<%= %w(日 月 火 水 木 金 土)[event.day_time.wday] %>)
             	<%= event.day_time.strftime('%H:%M') %>
               <%= event.ground %>
