--- a/app/views/teams/list.html.erb
+++ b/app/views/teams/list.html.erb
@@ -5,17 +5,17 @@
   <div class="teams">
     <div class="team-change">
       <span>
-        <% @belong_teams.each do |belomg_team| %>
-          <%= link_to (switch_team_path(belomg_team)), method: :post do %>
+        <% @belong_teams.each do |belong_team| %>
+          <%= link_to (switch_team_path(belong_team)), method: :post do %>
             <div class="team-change__list">
-              <% if belomg_team.image.attached? %>
-                <%= image_tag(belomg_team.image,  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
-                <%= image_tag(belomg_team.image,  size: "20x20", gravity: :center, crop: "20x20+0+0", class: "icon sp") %>
+              <% if belong_team.image.attached? %>
+                <%= image_tag(belong_team.image,  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
+                <%= image_tag(belong_team.image,  size: "20x20", gravity: :center, crop: "20x20+0+0", class: "icon sp") %>
               <% else %>
                 <%= image_tag("default_team_image.webp",  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
                 <%= image_tag("default_team_image.webp",  size: "20x20", gravity: :center, crop: "20x20+0+0", class: "icon sp") %>
               <% end %>
-              <%= belomg_team.name %>
+              <%= belong_team.name %>
             </div>
           <% end %>
         <% end %>
