--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,6 +91,7 @@ table{
 	border-radius: 5px;
 	cursor: pointer;
 	z-index: 1;
+	color: white;
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
 	@include box_sizing;
 	>a {
@@ -568,6 +569,17 @@ table{
 	}
 	input[type="file"] {
 		display: none;
+	}
+	&__comment{
+		width: 200px;
+		margin-top: 15px;
+		textarea {
+		border: 1px #bbb solid;
+		width: 100%;
+		border-radius: 5px;
+		@include box_sizing;
+		padding: 0px 5px;
+	}
 	}
 }
 
