イベントコメント機能の実装

--- a/app/views/event_comments/_event_comments_form.html.erb
+++ b/app/views/event_comments/_event_comments_form.html.erb
@@ -3,5 +3,5 @@
   <%= f.text_area :comment, rows: 2 %>
   <%= render 'shared/form_error_messages', object: f.object, attribute: :comment %>
   <%= f.hidden_field :team_id, value: @team.id %>
-  <%= f.submit "コメントを追加する", class: "form__btn--orange" %>
+  <%= f.submit "コメントを投稿する", class: "form__btn--orange" %>
 <% end %>
