スケジュールのメンバー表示順変更機能の実装

--- a/app/views/event_entries/edit.html.erb
+++ b/app/views/event_entries/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(url: event_entry_path, method: :put, local: true) do |f| %>
+<%= form_with(url: event_entry_path, method: :patch, local: true) do |f| %>
   <div class="event">
     <table>
       <% @event_entries.each_with_index do |event_entry, i| %>
