--- a/app/views/team/team_members/edit_order.html.erb
+++ b/app/views/team/team_members/edit_order.html.erb
@@ -1,6 +1,5 @@
-<% provide(:title, 'メンバー表示順編集') %>
-<% provide(:button_text, '更新する') %>
-<div class="form">
-  <h2>メンバー表示順編集</h2>
-  <%= render 'member_order_form' %>
-</div>
+<% provide(:title, 'メンバー表示順変更') %>
+<% provide(:button_text, '変更する') %>
+<h2>メンバー表示順変更</h2>
+<p class="center">※数字が小さい順に並び替えます</p>
+<%= render 'member_order_form' %>
